apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
  namespace: tools
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: homepage
  type: ClusterIP
